@@ -574,6 +574,10 @@ send_async_finished (GInputStream *stream)
 {
   SoupInputStreamPrivate *priv = SOUP_INPUT_STREAM_GET_PRIVATE (stream);
   GSimpleAsyncResult *result;
+  GError *error = NULL;
+
+  if (!g_cancellable_set_error_if_cancelled (priv->cancellable, &error))
+    set_error_if_http_failed (priv->msg, &error);
 
   priv->got_headers_cb = NULL;
   priv->finished_cb = NULL;
@@ -581,7 +585,13 @@ send_async_finished (GInputStream *stream)
 
   result = priv->result;
   priv->result = NULL;
-  g_simple_async_result_set_op_res_gboolean (result, SOUP_STATUS_IS_SUCCESSFUL (priv->msg->status_code));
+
+  g_simple_async_result_set_op_res_gboolean (result, error == NULL);
+  if (error)
+    {
+      g_simple_async_result_set_from_error (result, error);
+      g_error_free (error);
+    }
   g_simple_async_result_complete (result);
 }
 
@@ -677,7 +687,11 @@ soup_input_stream_send_finish (GInputStream  *stream,
 
   g_return_val_if_fail (G_IS_SIMPLE_ASYNC_RESULT (result), FALSE);
   simple = G_SIMPLE_ASYNC_RESULT (result);
+
   g_return_val_if_fail (g_simple_async_result_get_source_tag (simple) == soup_input_stream_send_async, FALSE);
+
+  if (g_simple_async_result_propagate_error (simple, error))
+    return FALSE;
 
   return g_simple_async_result_get_op_res_gboolean (simple);
 }
